-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0-rc1
-
None
-
36531a106 (14.0)
I could start the CppCheck from the Analyze menu and it showed hints.
But while clang-tidy was flooding my Soruce Editor with hints, CppCheck hints were not shown.
I had a look at the Edit => Preferences => Analyzer => CppCheck and the settings were the same as in the explicit call from Menu Analyze => CppCheck.
However, no hints annotations in the Source Editor.
The manual tells me:
"To specify the settings above for the automatically run checks, select Edit > Preferences > Analyzer > CppCheck."
By "accident" it started to work with annotations when I pressed "Apply" before closing the Preferences for the first time. Without this "apply" there was not annotation.
As all checkmarks in the Preferences Dialog were set reasonable, I had always closed the Preferences with the [x] in the upper corner ...
How about an additional checkmark to a activate/de-activate "automatically run checks" in the CppCheck Preferences Panel?
Or have it automatically running when the plugin is active?
- relates to
-
QTCREATORBUG-30615 Analyzer: CppCheck checkbox option not working
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-28951 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 568588,3 | Cppcheck: Fix handling of settings | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |