Cppcheck: Fix handling of settings

We need to distinguish between the global settings and the
settings used for a manual analyzer run.

Fixes: QTCREATORBUG-28951
Fixes: QTCREATORBUG-30615
Change-Id: Ic2dabd14e4d06d77bebcedd9e653f54a4d179c82
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>